<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/CO_title"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/CO_phone_number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="14dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <ListView
        android:id="@+id/pizzaList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/CO_subtotal"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/subtotal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="50dp"
        android:text="@string/CO_tax"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/removePizza"
        app:layout_constraintEnd_toEndOf="@+id/pizzaList"
        app:layout_constraintStart_toStartOf="@+id/subtotal" />

    <TextView
        android:id="@+id/salesTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="7dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/removePizza"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="@string/CO_order_total"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/orderTotalCO"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/orderTotalCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/subtotal" />

    <Button
        android:id="@+id/removePizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:onClick="removePizzaClick"
        android:text="@string/CO_remove_button"
        app:layout_constraintBottom_toTopOf="@+id/addOrder"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="46dp"
        android:onClick="addOrderClick"
        android:text="@string/CO_add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="146dp"
        android:text="@string/CO_instructions"
        app:layout_constraintStart_toStartOf="@+id/pizzaList"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>