<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/MM_title"
        android:textColor="#FA0000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/MM_phone_prompt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/numberEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/MM_phone_hint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#4C4C4C"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/storeOrdersButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="39dp"
        android:onClick="loadStoreOrders"
        android:text="@string/MM_manage_store_orders"
        app:layout_constraintBottom_toBottomOf="@+id/currentOrderButton"
        app:layout_constraintEnd_toStartOf="@+id/currentOrderButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/currentOrderButton" />

    <Button
        android:id="@+id/currentOrderButton"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="62dp"
        android:onClick="loadCurrentOrder"
        android:text="@string/MM_check_current_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/storeOrdersButton"
        app:layout_constraintTop_toBottomOf="@+id/deluxeButton" />

    <ImageButton
        android:id="@+id/pepperoniButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/MM_add_pepperoni"
        android:onClick="loadPepperoni"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/hawaiianButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberEnter"
        app:srcCompat="@drawable/pepperoni"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/hawaiianButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/MM_add_hawaiian"
        android:onClick="loadHawaiian"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/pepperoniButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pepperoniButton"
        app:layout_constraintTop_toTopOf="@+id/pepperoniButton"
        app:srcCompat="@drawable/hawaiian"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/deluxeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/MM_add_deluxe"
        android:onClick="loadDeluxe"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/deluxe"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:text="@string/MM_add_pepperoni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pepperoniButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="28dp"
        android:text="@string/MM_add_hawaiian"
        app:layout_constraintEnd_toEndOf="@+id/hawaiianButton"
        app:layout_constraintTop_toBottomOf="@+id/hawaiianButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="162dp"
        android:text="@string/MM_add_deluxe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/deluxeButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="61dp"
        android:contentDescription="@string/MM_pizza_guy"
        app:layout_constraintBottom_toTopOf="@+id/currentOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deluxeButton"
        app:layout_constraintTop_toBottomOf="@+id/hawaiianButton"
        app:srcCompat="@drawable/pizzaguy" />

</androidx.constraintlayout.widget.ConstraintLayout>