<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaCustomizationActivity">

    <ImageView
        android:id="@+id/pizzaPic"
        android:layout_width="233dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/PC_pizza_image"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pepperoni"
        tools:ignore="ImageContrastCheck" />

    <Spinner
        android:id="@+id/sizeMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:entries="@array/PC_sizes"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/selectedList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PC_size"
        app:layout_constraintBottom_toTopOf="@+id/sizeMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaPic" />

    <ListView
        android:id="@+id/selectedList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeMenu"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ListView
        android:id="@+id/addList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/PC_price"
        app:layout_constraintBottom_toTopOf="@+id/pizzaPrice"
        app:layout_constraintEnd_toStartOf="@+id/pizzaPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addList" />

    <TextView
        android:id="@+id/pizzaPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addToOrderButton"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="5dp"
        android:onClick="addToOrderButtonClick"
        android:text="@string/PC_add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pizzaPrice"
        app:layout_constraintTop_toBottomOf="@+id/addList" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="14dp"
        android:text="@string/MM_select_toppings"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/selectedList"
        app:layout_constraintTop_toBottomOf="@+id/selectedList" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/MM_add_toppings"
        app:layout_constraintBottom_toTopOf="@+id/addList"
        app:layout_constraintEnd_toEndOf="@+id/addList"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
</androidx.constraintlayout.widget.ConstraintLayout>