<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOrdersActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="39dp"
        android:text="@string/SO_store_orders_title"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="37dp"
        android:text="@string/SO_phone_number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/phoneMenu"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Spinner
        android:id="@+id/phoneMenu"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="SpeakableTextPresentCheck" />

    <ListView
        android:id="@+id/storeOrdersList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phoneMenu" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/SO_order_total"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/orderTotal"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="cancelOrderButtonClick"
        android:text="@string/SO_cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/orderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="102dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11" />
</androidx.constraintlayout.widget.ConstraintLayout>